--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,38 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>
-      Ionic Blank
+      MercadoSearch vivianalondo
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content>
+  <ion-list>
+    <ion-item>
+      <ion-label color="dark">Ingrese nombre del producto:</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-input type="text" [(ngModel)]="product"></ion-input>
+    </ion-item>
+    <ion-item>
+        <button ion-button color="secondary" round icon-left
+          (click)='buscar(product);'>
+          <ion-icon name="search"></ion-icon>
+          Buscar Producto
+        </button>
+    </ion-item>
+    
+  </ion-list>
+  
+
+  <ion-list>
+    <ion-item *ngFor="let result of results">
+      <ion-avatar item-start>
+        <img [src]="result.thumbnail">
+      </ion-avatar>
+      <h2>Artículo: {{ result.title }}</h2>
+      <p>Precio: {{ result.price }}</p>
+      <p>Cantidad vendidos: {{ result.sold_quantity }}</p>
+    </ion-item>
+  </ion-list>
 </ion-content>
